# lowfat

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
crates/lowfat/: Cargo.toml
crates/lowfat-core/: Cargo.toml
crates/lowfat-core/src/: lf.rs  lib.rs  structured.rs
crates/lowfat-plugin/: Cargo.toml
crates/lowfat-plugin/embedded/git/git-compact/: BENCHMARK.md  filter.lf  filter.sh  lowfat.toml
crates/lowfat-plugin/src/: discovery.rs  embedded.rs  manifest.rs  security.rs
crates/lowfat-runner/src/: lf_filter.rs  lib.rs  process.rs  runner.rs
crates/lowfat-runner/tests/: lf_plugins.rs
crates/lowfat/src/: main.rs
crates/lowfat/src/commands/: filter.rs  info.rs  mod.rs  plugin.rs  run.rs  stats.rs
crates/lowfat/src/filters/: git.rs
docs/: ARCHITECTURE.md  CONFIG.md  PLUGINS.md  lf-filter-v2.md
plugins/docker/docker-compact/: filter.lf  lowfat.toml
plugins/git/git-compact/: filter.lf  filter.sh  lowfat.toml
plugins/kubectl/kubectl-compact/: filter.lf
plugins/ls/ls-compact/: filter.lf  lowfat.toml
test-fixtures/plugins/kubectl/kubectl-compact/: filter.lf
