[package]
name = "lowfat-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin manifest, discovery, registry for lowfat"

# Only the embedded plugins' load-bearing files (lowfat.toml + filter.lf) ship
# in the crate. Legacy .sh baselines, samples, and benchmark docs are dev/test
# artifacts — keep them out of the published tarball.
exclude = [
    "embedded/**/samples",
    "embedded/**/filter.sh",
    "embedded/**/bench.sh",
    "embedded/**/BENCHMARK.md",
]

[dependencies]
lowfat-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "plugin_bench"
harness = false
